external-crates/move/crates/move-compiler/tests/move_2024/expansion/module_alias_as_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/expansion/module_alias_as_type.move:5:16
  │
5 │     fun foo(x: X) { x; }
  │                ^ Expected a type, function, or constant in this position, not a module
